--- a/src/components/Column.astro
+++ b/src/components/Column.astro
@@ -1,5 +1,5 @@
 ---
-import type { VerticalAlignments } from "@lib/types";
+export type VerticalAlignments = "top" | "middle" | "bottom";
 
 export type Props = {
 	ratio: number;
