--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -1,7 +1,7 @@
 ---
 import sanityClient from "@root/sanity.js";
 import imageUrlBuilder from "@sanity/image-url";
-import type { SanityImageMetadataObject } from "@lib/types";
+import type { SanityImageMetadataObject } from "@lib/types.astro";
 import type { SanityImageObject, SanityImageSource } from "@sanity/image-url/lib/types/types";
 
 const imageBuilder = imageUrlBuilder(sanityClient);
