--- a/src/components/PageBuilder.astro
+++ b/src/components/PageBuilder.astro
@@ -1,8 +1,7 @@
 ---
-import Column from "@components/Column.astro";
+import Column, { type VerticalAlignments } from "@components/Column.astro";
 import PortableText from "@components/PortableText.astro";
 import Row from "@components/Row.astro";
-import type { VerticalAlignments } from "@lib/types";
 import type { TypedObject } from "astro-portabletext/types";
 
 export type PageBuilderProps = {
