--- a/src/components/TitleAndSubtitle.astro
+++ b/src/components/TitleAndSubtitle.astro
@@ -9,9 +9,16 @@ type Props = {
 const {
 	title,
 	subtitle,
-	separator = ":&nbsp;",
+	separator = ": ",
 	classPrefix,
 } = Astro.props;
+
+export const separatorsByType = {
+	project: undefined,
+	publication: undefined,
+	news: undefined,
+	press: " →&nbsp;",
+};
 ---
 
 {title && (<>
